# term.ai.te

./: .gitignore  .iteration-notes.md  .task-strategy.md  IMPLEMENTATION.md  README.md  REFACTORING_PLAN.md  action_plan.md  agent-shelly.sh  bash-agent.sh  config  dice.sh  goblin_test.txt  hello_world.sh  pyproject.toml  rainbow_hello.sh  shellai.py  task-strategy.md  termaite.py  termaite.sh  test  test_dice_cases.sh  test_output.txt
.github/: copilot-instructions.md
archive/: README.md
termaite/: __init__.py  __main__.py  cli.py  constants.py
termaite/agents/: __init__.py
termaite/commands/: __init__.py  executor.py  permissions.py  safety.py
termaite/config/: __init__.py  manager.py  templates.py
termaite/core/: __init__.py  application.py  simple_handler.py  task_handler.py
termaite/llm/: __init__.py  client.py  parsers.py  payload.py
termaite/utils/: __init__.py  helpers.py  logging.py
